Fixed alignemnt of interactive method (#15)

--- a/src/ContentDescriptor/ContentDescriptor.css
+++ b/src/ContentDescriptor/ContentDescriptor.css
@@ -1,25 +1,3 @@
-.MuiExpansionPanelSummary-expandIcon.Mui-expanded {
-  transform: rotate(0deg) !important;
-}
-.MuiExpansionPanelSummary-expandIcon {
-  order: -1;
-  transform: rotate(-90deg) !important;
-  margin-right: 0px !important;
-}
-
-.MuiExpansionPanelSummary-content {
-  align-items: center;
-}
-
-.MuiExpansionPanelSummary-root {
-  padding: 0 24px 0 0px !important;
-}
-
-/* #interactive-box input {
-  border: 1px solid black;
-  border-radius: 5px;
-} */
-
 .glyphicon-plus {
   --b: 4px; /* the thickness */
   width: 40px; /* the size */
@@ -39,12 +17,16 @@ select, input {
   padding: 0.8rem;
   background: var(--docsearch-searchbox-focus-background);
   color: var(--docsearch-text-color);
-  margin-bottom: 0.5rem;
   transition: border var(--ifm-transition-fast) ease;
 }
 
-#interactive-box input[type=text] {
+#interactive-box input {
   width: 100%
+}
+
+#interactive-box .form-group {
+  margin-top: 0.25rem !important;
+  margin-bottom: 0.25rem !important;
 }
 
 .method section {
